server added in this project...

--- a/package.json
+++ b/package.json
@@ -2,19 +2,36 @@
   "name": "blabla-client",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "env-cmd -f .env.local node ./server/index.js",
+    "build": "env-cmd -f .env.local next build",
+    "start": "env-cmd -f .env.local next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@tensorflow/tfjs-node": "^1.7.4",
+    "@types/jasmine": "^3.5.9",
+    "@types/node": "^13.9.2",
     "awesome-debounce-promise": "^2.1.0",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "canvas": "^2.8.0",
+    "colors": "^1.4.0",
     "compressorjs": "^1.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
+    "express": "^4.17.2",
+    "face-api.js": "^0.22.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.12.0",
+    "nanoid": "^3.1.22",
     "next": "12.0.4",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.7.0",
-    "lodash": "^4.17.21",
+    "pm2": "^5.1.2",
     "react": "17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "17.0.2",
@@ -27,7 +44,10 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.43.4",
     "scss": "^0.2.4",
+    "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
+    "swagger-jsdoc": "^7.0.0-rc.6",
+    "swagger-ui-express": "^4.1.6",
     "throttle-debounce": "^3.0.1"
   },
   "devDependencies": {
