--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "blabla-client",
   "private": true,
   "scripts": {
-    "dev": "env-cmd -f .env.local node ./server/index.js",
-    "build": "env-cmd -f .env.local next build",
-    "start": "env-cmd -f .env.local next start",
+    "dev": "node ./server/index.js",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,7 +21,6 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "env-cmd": "^10.1.0",
     "express": "^4.17.2",
     "face-api.js": "^0.22.2",
     "jsonwebtoken": "^8.5.1",
