--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.12.0",
     "nanoid": "^3.1.22",
-    "next": "12.0.4",
+    "next": "latest",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.7.0",
     "pm2": "^5.1.2",
