--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,8 @@ jobs:
         with: 
           host: ${{ secrets.DO_HOST }}
           password: ${{ secrets.DO_PASSWORD }}
-          username: ${{ secrets.DO_USERNAME }}.DO_KEY }}
+          username: ${{ secrets.DO_USERNAME }}
+          key: ${{ secrets.DO_SSH_KEY }}
           script: |
             #this deployment gives little downtime on app
             #stop all the running containers
