--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         uses: appleboy/ssh-action@v0.1.3
         with: 
           host: ${{ secrets.DO_HOST }}
+          password: ${{ secrets.DO_PASSWORD }}
           username: ${{ secrets.DO_USERNAME }}
-          key: ${{ secrets.DO_SSH_KEY }}
           script: |
             #this deployment gives little downtime on app
             #stop all the running containers
