--- a/package.json
+++ b/package.json
@@ -2,18 +2,11 @@
   "name": "blabla-client",
   "private": true,
   "scripts": {
-    "dev": "node ./server/index.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "nodemon --max-old-space-size=4096 ./server/index.js",
-    "prod": "node --max-old-space-size=4096 ./server/index.js",
-    "lint": "next lint"
-  },
-  "engines": {
-    "node": "14.x"
+    "start": "next start"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "@tensorflow/tfjs-node": "^1.7.4",
     "@types/jasmine": "^3.5.9",
     "@types/node": "^13.9.2",
     "awesome-debounce-promise": "^2.1.0",
@@ -25,19 +18,12 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.2",
-    "express-ip": "^1.0.4",
-    "face-api.js": "^0.22.2",
-    "ioredis": "^4.28.3",
-    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mic-recorder-to-mp3": "^2.2.2",
-    "mongoose": "^5.12.0",
     "nanoid": "^3.1.22",
     "next": "12.0.10",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.7.0",
-    "nodemon": "^2.0.15",
     "pm2": "^5.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -51,10 +37,7 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.43.4",
     "scss": "^0.2.4",
-    "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
-    "swagger-jsdoc": "^7.0.0-rc.6",
-    "swagger-ui-express": "^4.1.6",
     "throttle-debounce": "^3.0.1",
     "watermarkjs": "^2.1.1"
   },
