--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pm2": "^5.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-recaptcha-v3": "^1.9.7",
     "react-redux": "^7.2.0",
     "react-textarea-autosize": "^8.3.3",
     "redis": "^4.0.2",
