--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "firebase": "^9.6.10",
     "lodash": "^4.17.21",
     "mic-recorder-to-mp3": "^2.2.2",
     "nanoid": "^3.1.22",
