--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "awesome-debounce-promise": "^2.1.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "canvas": "^2.8.0",
     "colors": "^1.4.0",
     "compressorjs": "^1.1.1",
@@ -27,6 +28,7 @@
     "next-images": "^1.7.0",
     "pm2": "^5.1.2",
     "react": "17.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "17.0.2",
     "react-google-recaptcha-v3": "^1.9.7",
     "react-redux": "^7.2.0",
@@ -39,6 +41,8 @@
     "sass": "^1.43.4",
     "scss": "^0.2.4",
     "socket.io-client": "^4.4.0",
+    "suneditor": "^2.42.0",
+    "suneditor-react": "^3.4.0",
     "throttle-debounce": "^3.0.1",
     "watermarkjs": "^2.1.1"
   },
