--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/jasmine": "^3.5.9",
     "@types/node": "^13.9.2",
     "awesome-debounce-promise": "^2.1.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "canvas": "^2.8.0",
@@ -22,6 +22,7 @@
     "firebase": "^9.6.10",
     "lodash": "^4.17.21",
     "mic-recorder-to-mp3": "^2.2.2",
+    "mongoose": "^6.3.1",
     "nanoid": "^3.1.22",
     "next": "12.0.10",
     "next-compose-plugins": "^2.2.1",
