--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "colors": "^1.4.0",
     "compressorjs": "^1.1.1",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "firebase": "^9.7.0",
     "lodash": "^4.17.21",
@@ -27,6 +26,7 @@
     "next": "12.0.10",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.7.0",
+    "nextjs-cors": "^2.1.1",
     "pm2": "^5.1.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.3.0",
