--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "ffmpeg-extract-frames": "^2.0.2",
     "firebase": "^9.7.0",
+    "gsap": "^3.11.3",
     "lodash": "^4.17.21",
     "mic-recorder-to-mp3": "^2.2.2",
     "mongoose": "^6.3.1",
@@ -33,6 +34,7 @@
     "react-bootstrap": "^2.3.0",
     "react-dom": "17.0.2",
     "react-google-recaptcha-v3": "^1.9.7",
+    "react-intersection-observer": "^9.4.0",
     "react-redux": "^7.2.0",
     "react-textarea-autosize": "^8.3.3",
     "redis": "^4.0.2",
@@ -41,6 +43,7 @@
     "redux-persist": "6.0.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.43.4",
+    "scrollmagic": "^2.0.8",
     "scss": "^0.2.4",
     "socket.io-client": "^4.4.0",
     "suneditor": "^2.42.0",
