--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pm2": "^5.1.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.3.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "17.0.2",
     "react-google-recaptcha-v3": "^1.9.7",
     "react-intersection-observer": "^9.4.0",
