--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/jasmine": "^3.5.9",
     "@types/node": "^13.9.2",
+    "@vercel/analytics": "^0.1.6",
     "awesome-debounce-promise": "^2.1.0",
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
