--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"colors": "^1.4.0",
 		"compressorjs": "^1.1.1",
 		"cookie-parser": "^1.4.6",
+		"detectincognitojs": "^1.3.0",
 		"dotenv": "^8.2.0",
 		"ffmpeg-extract-frames": "^2.0.2",
 		"firebase": "^9.9.0",
